update hr theme

--- a/AnperoFrontend/Views/Home/Index.cshtml
+++ b/AnperoFrontend/Views/Home/Index.cshtml
@@ -8,6 +8,11 @@
     }
 
 }
+@section health{
+<meta name="description" content="giày thể thao, giày tennis, đồ thể thao,túi thể thao, giày adidas" />
+<meta name="keywords" content="giày thể thao, giày tennis, đồ thể thao,túi thể thao, giày adidas" />
+}
+
 <div id="home-slider">
     <div class="container">
         <div class="row">
