add shopping cart function

--- a/AnperoFrontend/Views/Shared/_Layout.cshtml
+++ b/AnperoFrontend/Views/Shared/_Layout.cshtml
@@ -238,9 +238,8 @@
                             <div class="tit-name">Địa chỉ:</div>
                             <div class="tit-contain">@commonInfo.Address</div>
                             <div class="tit-name">Phone:</div>
-                            <div class="tit-contain">@commonInfo.HotLine (ms Hương)</div>
-                            <div class="tit-name">Phone:</div>
-                           
+                            <div class="tit-contain">@commonInfo.HotLine (ms Hương) - 091.987.1689 (mr Phú)</div>
+                            
                             @if (string.IsNullOrEmpty(commonInfo.Email))
                             {
                                 <div class="tit-name">Email:</div>
