--- a/AnperoFrontend/Views/Shared/_Layout.cshtml
+++ b/AnperoFrontend/Views/Shared/_Layout.cshtml
@@ -97,59 +97,27 @@
                 <div class="col-xs-5 col-sm-3 col-md-2 group-button-header">
                     <a target="_blank" title="Chia sẻ trên google+" href="https://plus.google.com/share?url=@HttpContext.Current.Request.Url.AbsoluteUri" class="btn-heart">wishlist</a>
                     <div class="btn-cart" id="cart-block">
-                        <a title="My cart" href="cart.html">Cart</a>
-                        <span class="notify notify-right">2</span>
+                        <a title="My cart" href="/product/checkout">Cart</a>
+                        <span class="notify notify-right spN"></span>
                         <div class="cart-block">
                             <div class="cart-block-content">
-                                <h5 class="cart-title">2 Items in my cart</h5>
+                                <h5 class="cart-title"><span class="spN"></span> Sản phẩm</h5>
                                 <div class="cart-block-list">
-                                    <ul>
-                                        <li class="product-info">
-                                            <div class="p-left">
-                                                <a href="#" class="remove_link"></a>
-                                                <a href="#">
-                                                    <img class="img-responsive" src="assets/data/product-100x122.jpg" alt="p10">
-                                                </a>
-                                            </div>
-                                            <div class="p-right">
-                                                <p class="p-name">Donec Ac Tempus</p>
-                                                <p class="p-rice">61,19 €</p>
-                                                <p>Qty: 1</p>
-                                            </div>
-                                        </li>
-                                        <li class="product-info">
-                                            <div class="p-left">
-                                                <a href="#" class="remove_link"></a>
-                                                <a href="#">
-                                                    <img class="img-responsive" src="assets/data/product-s5-100x122.jpg" alt="p10">
-                                                </a>
-                                            </div>
-                                            <div class="p-right">
-                                                <p class="p-name">Donec Ac Tempus</p>
-                                                <p class="p-rice">61,19 €</p>
-                                                <p>Qty: 1</p>
-                                            </div>
-                                        </li>
-                                    </ul>
+                                    <ul id="prCatCt"></ul>
                                 </div>
                                 <div class="toal-cart">
                                     <span>Total</span>
-                                    <span class="toal-price pull-right">122.38 €</span>
+                                    <span class="toal-price pull-right" id="ttSC"></span>
                                 </div>
                                 <div class="cart-buttons">
-                                    <a href="order.html" class="btn-check-out">Checkout</a>
+                                    <a href="/product/checkout" class="btn-check-out">Thanh toán</a>
                                 </div>
                             </div>
                         </div>
                     </div>
-
                 </div>
-
-
             </div>
-
         </div>
-        <!-- END MANIN HEADER -->
         <div id="nav-top-menu" class="nav-top-menu">
             <div class="container">
                 <div class="row">
@@ -193,8 +161,6 @@
                                                         <a href="@commonInfo.MenuList[i].Link">@commonInfo.MenuList[i].Tittle</a>
                                                     </li>
                                                 }
-
-
                                             }
                                         }
                                         <li class="active"><a href="/blog">Blog</a></li>
@@ -207,12 +173,10 @@
                         </nav>
                     </div>
                 </div>
+                
+                <div id="form-search-opntop"></div>
                 <!-- userinfo on top-->
-                <div id="form-search-opntop">
-                </div>
-                <!-- userinfo on top-->
-                <div id="user-info-opntop">
-                </div>
+                <div id="user-info-opntop"></div>
                 <!-- CART ICON ON MMENU -->
                 <div id="shopping-cart-box-ontop">
                     <i class="fa fa-shopping-cart"></i>
@@ -238,8 +202,8 @@
                             <div class="tit-name">Địa chỉ:</div>
                             <div class="tit-contain">@commonInfo.Address</div>
                             <div class="tit-name">Phone:</div>
-                            <div class="tit-contain">@commonInfo.HotLine (ms Hương) - 091.987.1689 (mr Phú)</div>
-                            
+                            <div class="tit-contain">@commonInfo.HotLine</div>
+
                             @if (string.IsNullOrEmpty(commonInfo.Email))
                             {
                                 <div class="tit-name">Email:</div>
@@ -249,7 +213,7 @@
                             @if (string.IsNullOrEmpty(commonInfo.Skype))
                             {
                                 <div class="tit-name">Skype:</div>
-                                    <div class="tit-contain"><a href="skype:@commonInfo.Skype?call"></a> @commonInfo.Skype</div>
+                                <div class="tit-contain"><a href="skype:@commonInfo.Skype?call"></a> @commonInfo.Skype</div>
                             }
 
                         </div>
