--- a/AnperoFrontend/Views/Shared/_Layout.cshtml
+++ b/AnperoFrontend/Views/Shared/_Layout.cshtml
@@ -190,6 +190,7 @@
     @RenderBody()
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Html.Raw(commonInfo.AnperoPlugin)
     @RenderSection("scripts", required: false)
     <footer id="footer">
         <div class="container">
