update shoping cart

--- a/AnperoFrontend/Views/Product/Checkout.cshtml
+++ b/AnperoFrontend/Views/Product/Checkout.cshtml
@@ -49,8 +49,8 @@
                     </li>
                 </ul>
             </div>
-            <h3 class="checkout-sep" style="display:none;">2. Phương thức vận chuyển</h3>
-            <div class="box-border" style="display:none;">
+            <h3 class="checkout-sep">2. Phương thức vận chuyển</h3>
+            <div class="box-border">
                 <ul class="shipping_method">
                     <li>
                         <p class="subcaption bold">Tại cửa hàng</p>
@@ -68,7 +68,7 @@
                 </ul>
             </div>
 
-            <h3 class="checkout-sep">2. Kiểm tra lại dịch vụ bạn đã đặt </h3>
+            <h3 class="checkout-sep">3. Kiểm tra lại thông tin sản phẩm</h3>
             <div class="box-border">
                 <table class="table table-bordered table-responsive cart_summary">
                     <thead>
@@ -101,7 +101,7 @@
                     <div id="g-recaptcha" class="pull-right"></div>
                 </div>
                 <button class="button pull-right" id="orderBtn">Xác nhận đặt hàng</button>
-                <a class="button pull-right" href="/">Đặt thêm dịch vụ khác</a>
+                <a class="button pull-right" href="/">Mua thêm</a>
             </div>
         </div>
         <div class="page-content checkout-page" id="cartContent2" style="display:none;"></div>
