--- a/AnperoFrontend/Views/Home/Index.cshtml
+++ b/AnperoFrontend/Views/Home/Index.cshtml
@@ -9,10 +9,9 @@
 
 }
 @section health{
-<meta name="description" content="giày thể thao, giày tennis, đồ thể thao,túi thể thao, giày adidas" />
-<meta name="keywords" content="giày thể thao, giày tennis, đồ thể thao,túi thể thao, giày adidas" />
+    <meta name="description" content="giúp việc Ngoại Giao Đoàn,giúp việc Ciputra Hà Nội,dịch vụ,Giúp việc,trông trẻ, chăm sóc người già,dọn nhà,tổng vệ sinh,tạp vụ,giupviec247,hỗ trợ 24/7" />
+    <meta name="keywords" content="giup viec ngoai giao doan,giup viec ciputra,giupviec247,dịch vụ giúp việc, giúp việc, trông trẻ, chăm người bệnh,chăm người già, người cao tuổi,vệ sinh,dọn nhà, quét dọn,giúp việc theo giờ,giúp việc ở lại nhà" />
 }
-
 <div id="home-slider">
     <div class="container">
         <div class="row">
@@ -97,8 +96,8 @@
                 <img alt="services" src="/assets/data/s1.png" />
             </div>
             <div class="info">
-                <a href="/policy/ship"><h3>Miễn phí ship</h3></a>
-                <span>Cho đơn hàng trên 3 triệu</span>
+                <a href="/"><h3>Thuận tiện</h3></a>
+                <span>Đặt dịch vụ nhanh chóng</span>
             </div>
         </div>
         <div class="col-xs-6 col-sm-3 service-item">
@@ -106,8 +105,8 @@
                 <img alt="services" src="/assets/data/s2.png" />
             </div>
             <div class="info">
-                <a href="/policy/rollback"><h3>Đổi trả trong 30 ngày</h3></a>
-                <span>Chính sách đổi trả</span>
+                <a href="/"><h3>Thời gian linh hoạt</h3></a>
+               
             </div>
         </div>
         <div class="col-xs-6 col-sm-3 service-item">
@@ -117,7 +116,7 @@
 
             <div class="info">
                 <a href="/"><h3>Tư vấn 24/7</h3></a>
-                <span>Đừng ngại gọi cho chúng tôi</span>
+                <span>Hỗ trợ mọi lúc mọi nơi</span>
             </div>
         </div>
         <div class="col-xs-6 col-sm-3 service-item">
@@ -125,8 +124,8 @@
                 <img alt="services" src="/assets/data/s4.png" />
             </div>
             <div class="info">
-                <a href="/policy/payment"><h3>Thanh toán an toàn</h3></a>
-                <span>Qua COD hoặc ngân hàng</span>
+                <a href="/policy/payment"><h3>An tâm</h3></a>
+                <span>Nhân viên lý lịch rõ ràng</span>
             </div>
         </div>
     </div>
@@ -140,9 +139,9 @@
                     <div class="col-xs-12 col-sm-12 page-top-left">
                         <div class="popular-tabs">
                             <ul class="nav-tab">
-                                <li class="active"><a data-toggle="tab" href="#tab-1">Hàng mới về</a></li>
+                                <li class="active"><a data-toggle="tab" href="#tab-1">Dịch vụ mới</a></li>
                                 <li><a data-toggle="tab" href="#tab-2">Đang khuyến mãi</a></li>
-                                <li><a data-toggle="tab" href="#tab-3">Bán chạy</a></li>
+                                <li><a data-toggle="tab" href="#tab-3">Được dùng nhiều</a></li>
 
                             </ul>
                             <div class="tab-container">
@@ -169,7 +168,7 @@
                                                                     <a title="Chi tiết sản phẩm" class="search" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)"></a>
                                                                 </div>
                                                                 <div class="add-to-cart">
-                                                                    <a title="Add to Cart" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)">Thêm vào giỏ hàng</a>
+                                                                    <a title="Add to Cart" href="javascript:Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName')">Chọn</a>
                                                                 </div>
                                                                 <div class="group-price">
                                                                     <span class="product-new">Mới</span>
@@ -222,7 +221,7 @@
                                                                 <a title="Chi tiết sản phẩm" class="search" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)"></a>
                                                             </div>
                                                             <div class="add-to-cart">
-                                                                <a title="Add to Cart" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)">Thêm vào giỏ hàng</a>
+                                                                <a title="Add to Cart" href="javascript:Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName')">Chọn vào giỏ hàng</a>
                                                             </div>
                                                             <div class="group-price">
                                                                 <span class="product-new">Mới</span>
@@ -277,7 +276,7 @@
                                                                     <a title="Chi tiết sản phẩm" class="search" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)"></a>
                                                                 </div>
                                                                 <div class="add-to-cart">
-                                                                    <a title="Add to Cart" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)">Thêm vào giỏ hàng</a>
+                                                                    <a title="Add to Cart" href="javascript:Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName')">Thêm vào giỏ hàng</a>
                                                                 </div>
                                                                 <div class="group-price">
                                                                     <span class="product-new">Mới</span>
@@ -342,7 +341,7 @@
                                     </h5>
                                     <div class="post-meta">
                                         <span class="date">@Anpero.StringHelpper.ConvertTimeVN(item.CreateDate)</span>
-                                        <span class="comment">@item.ViewTime view</span>
+                                        
                                     </div>
                                     <div class="readmore">
                                         <a href="@Anpero.StringHelpper.GetArticleLink(item.Title,item.Id)">Chi tiết</a>
