--- a/AnperoFrontend/Views/Product/Index.cshtml
+++ b/AnperoFrontend/Views/Product/Index.cshtml
@@ -63,28 +63,46 @@
 
                                 </div>
                                 <div class="product-price-group">
+                                    @{
+                                        string unitName = "";
+                                        if (item.SalePrice > 0 && item.SalePrice < 100000)
+                                        {
+                                            unitName = "/ giờ";
+                                        }
+                                        else if (item.SalePrice >= 100000 && item.SalePrice < 1000000)
+                                        {
+                                            unitName = "/ ngày";
+
+                                        }
+                                        else if (item.SalePrice >= 1000000)
+                                        {
+                                            unitName = "/ tháng";
+                                        }
+                                    }
+                                 
                                     @if (item.IsSale)
                                     {
-                                        <span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice.ToString()) đ</span>
+                                        <span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice.ToString()) đ @unitName</span>
+                                       
                                         <span class="old-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price.ToString()) đ</span>
-                                        <span class="discount">@Anpero.StringHelpper.ConVertToMoneyFormatInt((item.SalePrice- item.Price).ToString()) đ</span>
+                                        <span class="discount">@Anpero.StringHelpper.ConVertToMoneyFormatInt((item.SalePrice - item.Price).ToString()) đ</span>
                                     }
                                     else
                                     {
-                                        <span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price.ToString()) đ</span>
+                                        <span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price.ToString()) đ @unitName</span>
                                     }
                                 </div>
                                 <div class="info-orther">
-                                    <p>Mã Sản phẩm: #@item.Id</p>
+                                    <p>Mã dịch vụ: #@item.Id</p>
                                     <p>
                                         Trạng thái:
                                         @if (item.IsInstock)
                                         {
-                                            <span class="in-stock">Còn hàng</span>
+                                            <span class="in-stock">Sẵn sàn</span>
                                         }
                                         else
                                         {
-                                            <span class="in-stock">Tạm hết hàng</span>
+                                            <span class="in-stock">Đang bận</span>
                                         }
                                     </p>
                                     <p>Tình trạng: mới</p>
@@ -103,11 +121,11 @@
                                     <div class="button-group">
                                         @if (item.IsInstock)
                                         {
-                                            <a class="btn-add-cart" href="#">Thêm vào giỏ hàng</a>
+                                            <a class="btn-add-cart" href="javascript:Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName')">Chọn</a>
                                         }
                                         else
                                         {
-                                            <a class="btn-add-cart" href="#">Tạm hết hàng</a>
+                                            <a class="btn-add-cart" href="javascript:void(0);">Đang bận</a>
                                         }
                                     </div>
 
@@ -126,18 +144,22 @@
                             </div>
                         </div>
                         <!-- tab product -->
-                        <div class="product-tab">
-                            <ul class="nav-tab">
-                                <li class="active">
-                                    <a aria-expanded="false" data-toggle="tab" href="#product-detail">Thông tin sản phẩm</a>
-                                </li>
-                            </ul>
-                            <div class="tab-container">
-                                <div id="product-detail" class="tab-panel active">
-                                    @Html.Raw(item.Detail)
+                        @if (!string.IsNullOrEmpty(item.Detail))
+                        {
+                            <div class="product-tab">
+                                <ul class="nav-tab">
+                                    <li class="active">
+                                        <a aria-expanded="false" data-toggle="tab" href="#product-detail">Thông tin chi tiết</a>
+                                    </li>
+                                </ul>
+                                <div class="tab-container">
+                                    <div id="product-detail" class="tab-panel active">
+                                        @Html.Raw(item.Detail)
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                        }
+
                         <!-- ./tab product -->
                         <!-- box product -->
                         <div class="page-product-box">
